<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.beerkeeper.BeehiveActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/choose_beehive"

            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e6ffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_temperature"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_temperature"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"

                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_humidity"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_humidity"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_oxygen"
                    android:textSize="20sp"

                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_oxygen"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e6ffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/data_amount"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_amount"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"

                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/swarming"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>