<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.beerkeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@drawable/layout_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:weightSum="2"

            >

            <LinearLayout
                android:id="@+id/temperature_measuring"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/layout_border">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"

                    android:src="@drawable/temperature"
                    android:layout_marginTop="50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/layout_border2">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="33dp"
                    android:src="@drawable/humidity"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="-8dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/oxygen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/layout_border3"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginTop="50dp"

                    android:src="@drawable/oxygen"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/oxygen"
                    android:textSize="20sp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/beehive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/layout_border4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/beehive"
                    android:layout_gravity="center_horizontal|center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/beehive"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="7dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
